# view0x

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.single  ISSUE_COMPLETION_STATUS.md  README.md  SECURITY.md  STRUCTURE.md  SYSTEM_DESIGN.md  TEST_EXECUTION_GUIDE.md  TEST_REPORT.md  TODO.md  console-export-2025-6-26_12-57-19.txt  deploy.sh  docker-compose-simple.yml  docker-compose.production.yml  docker-compose.single.yml  docker-compose.tunnel.yml  docker-compose.vps.yml  docker-compose.yml  nginx-proxy.conf  package-lock.json  package.json  playwright.config.ts  render.yaml
.github/: ISSUES.md  pull_request_template.md
backend/: .dockerignore  .env  .env.example  Dockerfile  jest.config.js  package-lock.json  package.json  test-db-variants.js  test-db.js  test-session-pooler.js  test-supabase-api.js  test-supabase-client.js  tsconfig.json
deploy/: caddy-view0x.snippet
docs/: SECURITY.md  TESTING.md  TEST_EXECUTION_GUIDE.md
e2e/: accessibility.spec.ts  auth.spec.ts  contract-analyzer.spec.ts  visual-regression.spec.ts
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
performance-tests/: README.md  load-test.yml  stress-test.js
python/: Dockerfile  main.py  railway.json  requirements-minimal.txt  requirements.txt  start.sh
roadmap/: address-scan.json
scanner-engine/: package-lock.json  package.json  tsconfig.json
scripts/: backup-postgres.sh  complete-issues.sh  ensure-vps-edge.sh  generate-env-secrets.sh  install-git-hooks.sh  rotate-env-secrets.sh  smoke-test.sh  (+3 more)
sdk-python/: .pypirc  README.md  pyproject.toml
sdk-python/view0x_sdk/: __init__.py  client.py
(+258 files in other folders)
